kubernetes/overlays/gke-prd/app-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colabri-app
  namespace: colabri
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: colabri-app
          volumeMounts:
            - name: gcp-credentials
              mountPath: /var/secrets/google
              readOnly: true
            - name: appconfig
              mountPath: /app/static/appconfig.js
              subPath: appconfig.js
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: gcp-credentials
          secret:
            secretName: colabri-secrets
            items:
              - key: gcp-colabri-app-key.json
                path: gcp-colabri-app-key.json
        - name: appconfig
          secret:
            secretName: colabri-secrets
            items:
              - key: appconfig.js
                path: appconfig.js
