kubernetes/overlays/gke-prd/doc-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colabri-doc
  namespace: colabri
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: colabri-doc
          volumeMounts:
            - name: gcp-credentials
              mountPath: /var/secrets/google
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: gcp-credentials
          secret:
            secretName: colabri-secrets
            items:
              - key: gcp-sa-key.json
                path: gcp-sa-key.json
