kubernetes/overlays/gke-prd/app-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: colabri-app-service
  namespace: colabri
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
